--- a/Meditate/Base.lproj/Main.storyboard
+++ b/Meditate/Base.lproj/Main.storyboard
@@ -1,9 +1,12 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="15A284" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16F73" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
@@ -15,27 +18,28 @@
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4FV-Y5-gzN">
-                                <rect key="frame" x="20" y="100" width="280" height="280"/>
-                                <color key="backgroundColor" red="0.015686274510000001" green="0.21960784310000001" blue="0.76470588240000004" alpha="1" colorSpace="calibratedRGB"/>
+                                <rect key="frame" x="20" y="166" width="335" height="335"/>
+                                <color key="backgroundColor" red="0.015686274510000001" green="0.21960784310000001" blue="0.76470588240000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="4FV-Y5-gzN" secondAttribute="height" id="CSN-Pz-eqF"/>
                                 </constraints>
                             </view>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1OK-mD-5d3">
-                                <rect key="frame" x="20" y="20" width="280" height="21"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1OK-mD-5d3">
+                                <rect key="frame" x="20" y="20" width="335" height="20.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <gestureRecognizers/>
                         <constraints>
                             <constraint firstAttribute="trailing" secondItem="1OK-mD-5d3" secondAttribute="trailing" constant="20" id="JtH-oM-2Xh"/>
+                            <constraint firstItem="1OK-mD-5d3" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="OsU-Yp-TJ1"/>
                             <constraint firstAttribute="trailing" secondItem="4FV-Y5-gzN" secondAttribute="trailing" constant="20" id="Ulo-bA-V9K"/>
                             <constraint firstItem="1OK-mD-5d3" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="20" id="ZbL-CF-IZf"/>
                             <constraint firstItem="4FV-Y5-gzN" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="bLd-EK-xun"/>
@@ -45,7 +49,6 @@
                             <outletCollection property="gestureRecognizers" destination="KHD-tV-vAq" appends="YES" id="GC7-rq-BDu"/>
                         </connections>
                     </view>
-                    <simulatedScreenMetrics key="simulatedDestinationMetrics"/>
                     <connections>
                         <outlet property="circleView" destination="4FV-Y5-gzN" id="AXj-Yu-glg"/>
                         <outlet property="rythmLabel" destination="1OK-mD-5d3" id="eKV-Ma-k8o"/>
@@ -54,7 +57,7 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
                 <panGestureRecognizer minimumNumberOfTouches="1" id="KHD-tV-vAq">
                     <connections>
-                        <action selector="panGestureCallback:" destination="BYZ-38-t0r" id="gPt-Lj-xc6"/>
+                        <action selector="panGestureCallbackWithSender:" destination="BYZ-38-t0r" id="zfP-93-FWa"/>
                     </connections>
                 </panGestureRecognizer>
             </objects>
